@@ -19,7 +19,11 @@ Imports:
     Rcpp (>= 0.12.12),
     qpdf
 LinkingTo: Rcpp
-Suggests: jpeg, png, webp,
+Suggests: 
+    jpeg, 
+    png, 
+    webp,
+    tesseract,
     testthat
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
