@@ -8,6 +8,8 @@ export(pdf_data)
 export(pdf_fonts)
 export(pdf_info)
 export(pdf_length)
+export(pdf_ocr_data)
+export(pdf_ocr_text)
 export(pdf_pagesize)
 export(pdf_render_page)
 export(pdf_split)
